fix: AI Feature
